--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     },
     "dependencies": {
         "@formkit/auto-animate": "^0.8.2",
-        "@heroicons/vue": "^2.2.0"
+        "@heroicons/vue": "^2.2.0",
+        "@yeger/vue-masonry-wall": "^5.0.16"
     }
 }
